objects/Change_Task__c.object
<CustomObject>
    <fields>
        <fullName>Change_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Change Tasks</relationshipLabel>
        <relationshipName>Change_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change_Task_Number__c</fullName>
        <label>Change Task Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_description__c</fullName>
        <label>Short description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <externalId>true</externalId>
        <label>System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Change Task</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Change Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>